--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -36,5 +36,6 @@ gem 'spring',        group: :development
 # gem 'capistrano-rails', group: :development
 
 # Use debugger
-# gem 'debugger', group: [:development, :test]
-
+# gem 'debugger', group: [:development, :test
+gem 'active_model_serializers'
+gem 'faker'
