--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -39,3 +39,7 @@ gem 'spring',        group: :development
 # gem 'debugger', group: [:development, :test
 gem 'active_model_serializers'
 gem 'faker'
+group :production do
+  gem 'pg'
+  gem 'rails_12factor'
+end
