--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "ember-data": "1.0.0-beta.11",
     "ember-export-application-global": "^1.0.1",
     "express": "^4.10.1",
-    "glob": "^4.0.6"
+    "glob": "^4.0.6",
+    "node-sass": "1.1.2"
   },
   "dependencies": {
     "ember-cli-font-awesome": "0.0.4"
